--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     </header>
 
     <main>
-      <section class="section letter reveal" id="letter">
+      <section class="section year-review reveal" id="year-review">
         <div class="section-head">
-          <p class="section-eyebrow">To You</p>
-          <h2 class="section-title" data-letter-title>这一年的心里话</h2>
+          <p class="section-eyebrow">Year In Review</p>
+          <h2 class="section-title">小咪和小狗的年终总结</h2>
         </div>
-        <div class="letter-body" data-letter-body>
-          <p>谢谢你让平凡的日子发光。</p>
-          <p>希望以后每个新年，我们都能把新的故事放进这座小站里。</p>
+        <div class="story-panel">
+          <div class="story-rich" data-year-review-body>
+            <p>正在加载年终总结...</p>
+          </div>
         </div>
       </section>
 
@@ -52,18 +53,33 @@
           <p class="section-eyebrow">Moments</p>
           <h2 class="section-title" data-gallery-title>照片墙</h2>
         </div>
+        <div class="story-panel gallery-note" data-gallery-note-panel hidden>
+          <div class="story-rich" data-gallery-note-body></div>
+        </div>
         <div class="gallery-grid" id="gallery-grid"></div>
       </section>
 
-      <section class="section final reveal" id="final">
+      <section class="section outlook reveal" id="outlook">
         <div class="section-head">
-          <p class="section-eyebrow">For The Future</p>
-          <h2 class="section-title" data-final-title>下一页，是我们</h2>
+          <p class="section-eyebrow">New Year</p>
+          <h2 class="section-title">小咪和小狗的新年展望</h2>
         </div>
-        <div class="final-body" data-final-body>
-          <p>把未来也交给我们一起完成吧。</p>
+        <div class="story-panel">
+          <div class="story-rich" data-outlook-body>
+            <p>正在加载新年展望...</p>
+          </div>
         </div>
-        <div class="final-sign" data-final-sign>永远爱你，XXX</div>
+        <a
+          class="memories-link"
+          data-old-memories-link
+          href="assets/小咪小狗的往年精彩/97138a2be9dca643665331b5067f1d90.mp4"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <span class="memories-kicker">Flashback</span>
+          <span class="memories-title">小咪和小狗的往年精彩</span>
+          <span class="memories-text">点击查看回忆视频</span>
+        </a>
       </section>
     </main>
 
