--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>狗咪影集 | 2025-2026</title>
     <meta name="description" content="把 2025-2026 的故事装进影集里。" />
     <meta name="theme-color" content="#f6d1c1" />
-    <link rel="stylesheet" href="assets/styles.css" />
+    <link rel="stylesheet" href="assets/styles.css?v=20260216-2" />
   </head>
   <body>
     <div class="bg-shape shape-1" aria-hidden="true"></div>
@@ -99,6 +99,6 @@
     </div>
     <audio id="bgm-audio" preload="metadata"></audio>
 
-    <script src="assets/app.js" defer></script>
+    <script src="assets/app.js?v=20260216-2" defer></script>
   </body>
 </html>
